# random_walker

./: CMakeLists.txt  README.md  init.c  init.h  loop.c  loop.h  main.c  main.h  walker.c  walker.h
src/: init.c  main.c
